--- a/projects/ngx-ramblers/src/app/modules/common/icon-examples/icon-examples.html
+++ b/projects/ngx-ramblers/src/app/modules/common/icon-examples/icon-examples.html
@@ -34,7 +34,7 @@
               </div>
               <div class="col-sm-3">
                 <div class="badge-button">
-                  <fa-icon [icon]="icon.value" [class]="size"></fa-icon>
+                  <fa-icon [icon]="icon.value" [class]="size"/>
                   <span>{{ icon.key }}</span>
                 </div>
               </div>
