- Refined selection of walks in walk export:   - Walks that are not yet approved are excluded from auto-selection   - If a walk is calculated to have a PublishStatus with actionRequired it's shown with a yellow-icon otherwise it's shown with a green-icon   - Walks are selected primarily by whether they are selected, then by walk date

--- a/projects/ngx-ramblers/src/app/assets/styles/legacy.sass
+++ b/projects/ngx-ramblers/src/app/assets/styles/legacy.sass
@@ -1270,25 +1270,21 @@ table.inactive th
 
 .green-icon
   color: rgb(32, 191, 57)
-  display: block
   text-align: center
 
 
 .red-icon
   color: #eb0c35
-  display: block
   text-align: center
 
 
 .blue-icon
   color: #0097a4
-  display: block
   text-align: center
 
 
 .yellow-icon
-  color: #d6d072
-  display: block
+  color: rgb(255, 191, 0)
   text-align: center
 
 .table-pointer:hover
