- Removed walk status from walks with ramblers walk population - Walk Status added as badge for walks with local walk population

--- a/projects/ngx-ramblers/src/app/assets/styles/legacy.sass
+++ b/projects/ngx-ramblers/src/app/assets/styles/legacy.sass
@@ -1182,6 +1182,9 @@ a.svg:after
 .blue-badge
   background: #007A87
 
+.sunset-badge
+  background: $ramblers-colour-sunset
+
 img[src~="thumbnail"]
   width: 150px
   border-radius: 8px
