- Walk Image Edit Part 1 - Copy from Walks Manager - In order for this to work correctly, some changes have been made in /admin/system-settings?tab=area-group to configure the area and/or provide an automatic selection of group(s)   - When the settings view is first opened, a list of groups are automatically queried from Walks Manager for the currently selected area code   - There is a Selection Mode radio group with Area Selection Mode or Group Selection Mode options   - Area Selection Mode os pre-selected based on whether the current group code is 2 digits long (e.g. KT rather than KT50), otherwise group is chosen   - The currently configured group code is preselected in the Ramblers Group select field if Group Selection mode is selected, otherwise the area code is populated.   - The Group tab now has a Ramblers Area Code input field. This will be defaulted to the group that has a scope equal to "A" from the list of groups queried from Walks Manager.   - The Ramblers Group Code is now a read-only field and is set by means of selecting an entry in the Ramblers Group select field   - More than one group can be selected here although this is not normally the case for a single group   - On selection of a group, the Long Name is set to the value queried from the Ramblers groups - New Images tab created on Walk edit view with the following features:   - There is an option to choose Image Selection as None, Local or Walks Manager   - When Walks Manager is selected a select is displayed to display all Groups in the same Area   - On Selection of a group, all walks with images from Today Onwards are displayed   - On selection of a group, the images are imported to the local walk from walks manger and will appear on the right of the screen   - If the walk is not in the future the Walk Selection field can be used to choose Past Walks or All Walks

--- a/projects/ngx-ramblers/src/app/assets/styles/ramblers.select.theme.sass
+++ b/projects/ngx-ramblers/src/app/assets/styles/ramblers.select.theme.sass
@@ -376,3 +376,7 @@ $colour-light-blue: $ramblers-colour-highlight-dark
 .group-header
   vertical-align: middle
   font-weight: bold
+
+
+.ng-select .ng-dropdown-panel
+  z-index: 1000000
