--- a/projects/ngx-ramblers/src/app/pages/walks/walk-view/walk-leader.html
+++ b/projects/ngx-ramblers/src/app/pages/walks/walk-view/walk-leader.html
@@ -1,5 +1,5 @@
 <div class="event-panel rounded event-panel-inner">
-  <app-walk-group [displayedWalk]="displayedWalk"></app-walk-group>
+  <app-walk-group [displayedWalk]="displayedWalk"/>
   <h1>{{ display.isWalk(displayedWalk.walk) ? 'Walk Leader' : (display.eventTypeTitle(displayedWalk.walk) + " Organiser") }}</h1>
   <div>
     <div class="row">
