- Fixes to Content Text copy/duplicate function: - Fix has been applied to ensure that when any context is copied (using duplicate column or row or copy to external page), content text items are copied to new documents to avoid duplicate instances being generated in the site - When a page is in site edit mode, any duplicate text items are highlighted at the top of the page and also within each markdown field where a duplicate is detected - New component  admin/duplicate-page-content-navigator DuplicatePageContentNavigatorComponent has been created to display potential page content duplicates across the whole site and allow deletion of the duplicate(s) or content path renaming - New component  admin/duplicate-content-text-navigator DuplicateContentTextNavigatorComponent has been created to display potential content text duplicates across the whole site and allow navigation to the areas that need attention - Duplicate Row option has been added to Actions dropdown

--- a/projects/ngx-ramblers/src/app/assets/styles/content-edit.sass
+++ b/projects/ngx-ramblers/src/app/assets/styles/content-edit.sass
@@ -35,3 +35,10 @@
 .badge-button-active
   @extend .badge-button
   background-color: $ramblers-colour-sunrise
+
+.dotted-content
+  border: dotted 3px lightgray
+  border-radius: 6px
+  padding: 16px
+  margin-top: 16px
+  margin-bottom: 16px
