--- a/projects/ngx-ramblers/src/app/assets/styles/icons.sass
+++ b/projects/ngx-ramblers/src/app/assets/styles/icons.sass
@@ -1,10 +1,14 @@
 .fa-icon
   color: $ramblers-colour-mintcake
-  padding: 0px
+  padding: 0
+
+.fa-icon-sunrise
+  color: $ramblers-colour-sunrise
+  padding: 0
 
 .fa-icon-copied
   color: $ramblers-colour-mintcake-light
-  padding: 0px
+  padding: 0
 
 .markdown-preview-icon
   color: $ramblers-colour-mintcake
