--- a/projects/ngx-ramblers/src/app/pages/home/home.component.html
+++ b/projects/ngx-ramblers/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<app-dynamic-content [anchor]="'home-content'" contentPathReadOnly/>
+<app-dynamic-content [anchor]="BuiltInAnchor.HOME_CONTENT" contentPathReadOnly/>
 <div class="card-columns">
   @if (externalSystems?.facebook?.showFeed) {
     <app-facebook/>
