--- a/projects/ngx-ramblers/src/app/pages/instagram/instagram.component.html
+++ b/projects/ngx-ramblers/src/app/pages/instagram/instagram.component.html
@@ -5,7 +5,7 @@
     class="instagram-title float-right">{{ externalSystems?.instagram?.groupName }}</span></a>
   </h5>
   <p class="card-text">
-    <app-dynamic-content [anchor]="'instagram-content'" contentPathReadOnly/>
+    <app-dynamic-content [anchor]="BuiltInAnchor.INSTAGRAM_CONTENT" contentPathReadOnly/>
     @if (recentMedia?.length > 0) {
       <div class="spinner-border text-primary" role="status">
         <span class="sr-only">Loading...</span>
