- Added Support for creation/editing/deleting of local images on walks - Walk Image reorder/delete also added - Added support for heic image conversion in single drop of file in ImageCropperAndResizerComponent - Fixed copy of link to clipboard in social edit component - Removed some unused fields in front and backend within walk object

--- a/projects/ngx-ramblers/src/app/assets/styles/buttons.sass
+++ b/projects/ngx-ramblers/src/app/assets/styles/buttons.sass
@@ -382,3 +382,15 @@
 
 .cta-button p
   padding: 0 15px
+
+.button-container
+  position: absolute
+  top: 10px
+  right: 10px
+  z-index: 10000
+
+.button-edit-image
+  position: absolute
+  top: 44px
+  right: 26px
+  z-index: 10000
