- Provide fully configurable Events Row #37 - This completes https://github.com/nbarrett/ngx-ramblers/issues/37 - Dynamic Content Events Row was hard-coded to only render social events as of [release on 7th May 2025 — Dynamic Content Events Configuration & Local Walks Image Management](https://ngx-ramblers.org.uk/how-to/committee/release-notes/2025-05-07). This story provides full configuration of the events row such that the following parameters can be configured on the Events Row:   * All 3 Ramblers Event Types (Group Walk, Group Event, Wellbeing Walk)   * Filter Criteria (Date Range, Future Events, Past Events, All Events, Choose)   * From / To Date Range   * Sort Order   * Max Columns   * Field Inclusion checkboxes:     * Quick Search     * Pagination     * Alert Indicator     * Auto Title     * Add New Event Button - Also it was found that some media was incorrectly migrated on the previous release so DataMigrationService.migrateMedia() was created. This can only be run on demand from a social home page when events migration is enabled in system settings

--- a/projects/ngx-ramblers/src/app/assets/styles/legacy.sass
+++ b/projects/ngx-ramblers/src/app/assets/styles/legacy.sass
@@ -122,6 +122,9 @@ audio[controls], canvas, video
   width: 100%
   height: 150px
 
+.map-card-image-events
+  @extend .map-card-image
+  height: 250px
 
 h3 small
   font-size: 75%
