- Ability to Globally configure Link and List Styling defaults: - This completes issue https://github.com/nbarrett/ngx-ramblers/issues/40 (Styling change to distinguish links from bold text #40) - Default List and Link Styles can now be globally configured within /admin/system-settings?tab=styles   - Options available for Link Style are: Normal, Bold (prior default), Pink, Green   - Options available for List Style are: Arrow (prior default), No Image, Tick Medium and Tick Large - As part of this release other global styling changes were also made to bring them inline with Ramblers brand defaults:   - Body text has now been changed from 1rem -> 1.125rem   - Text links are now underlined by default but lose underline on hover

--- a/projects/ngx-ramblers/src/app/assets/styles/bs-datepicker.sass
+++ b/projects/ngx-ramblers/src/app/assets/styles/bs-datepicker.sass
@@ -248,7 +248,7 @@
 
 .bs-datepicker .current-timedate
   color: #54708b
-  font-size: 15px
+  font-size: 1.125rem
   text-align: center
   height: 30px
   line-height: 30px
