--- a/projects/ngx-ramblers/src/app/assets/styles/legacy.sass
+++ b/projects/ngx-ramblers/src/app/assets/styles/legacy.sass
@@ -131,12 +131,12 @@ h3 small
 
 .event-description-old
   text-align: justify
-  font-size: 15px
+  font-size: 1.125rem
 
 .event-description
   word-wrap: break-word
   text-align: justify
-  font-size: 15px
+  font-size: 1.125rem
   hyphens: auto
 
 .spaced-controls
