--- a/projects/ngx-ramblers/src/app/assets/styles/styles.sass
+++ b/projects/ngx-ramblers/src/app/assets/styles/styles.sass
@@ -6,6 +6,7 @@
 @import "./tagify"
 @import "./ramblers.select.theme"
 @import "./legacy"
+@import "./markdown"
 @import "./ramblers"
 @import "./alerts"
 @import "./buttons"
