--- a/projects/ngx-ramblers/src/app/carousel/view/carousel.sass
+++ b/projects/ngx-ramblers/src/app/carousel/view/carousel.sass
@@ -21,7 +21,7 @@
 
 @include media-breakpoint-up(lg)
   .carousel-caption h4
-    font-size: 15px
+    font-size: 1.125rem
 
 @include media-breakpoint-up(xl)
   .carousel-caption h4
