--- a/projects/ngx-ramblers/src/app/pages/walks/walk-list/walk-list.component.sass
+++ b/projects/ngx-ramblers/src/app/pages/walks/walk-list/walk-list.component.sass
@@ -3,4 +3,20 @@
   min-height: 54px
 
 .btn-group-custom
-  height: 36px
+  display: inline-flex
+  align-items: center
+  align-self: center
+  .btn
+    display: inline-flex
+    align-items: center
+    padding: .75rem .85rem
+    line-height: 1
+    border-radius: 6px
+    margin: 0
+    vertical-align: middle
+    .ml-2
+      margin-left: .25rem
+
+.pagination
+  align-self: center
+  margin-bottom: 0
