--- a/projects/ngx-ramblers/src/app/pages/home/home.component.sass
+++ b/projects/ngx-ramblers/src/app/pages/home/home.component.sass
@@ -1,4 +1,3 @@
-@import "bootstrap/scss/bootstrap.scss"
 @import "../../assets/styles/colours"
 
 .carousel-wrapper
@@ -11,19 +10,19 @@
 .carousel-caption h4
   font-size: 14px
 
-@include media-breakpoint-up(sm)
+@media (min-width: 576px)
   .carousel-caption h4
     font-size: 10px
 
-@include media-breakpoint-up(md)
+@media (min-width: 768px)
   .carousel-caption h4
     font-size: 12px
 
-@include media-breakpoint-up(lg)
+@media (min-width: 992px)
   .carousel-caption h4
     font-size: 1.125rem
 
-@include media-breakpoint-up(xl)
+@media (min-width: 1200px)
   .carousel-caption h4
     font-size: 20px
 
@@ -57,15 +56,5 @@
     background: $ramblers-colour-hover
     opacity: 90%
 
-.card-columns
-  @include media-breakpoint-only(lg)
-    column-count: 2
 
-  @include media-breakpoint-only(md)
-    column-count: 1
 
-  @include media-breakpoint-only(xl)
-    column-count: 2
-
-  @include media-breakpoint-only(sm)
-    column-count: 1
