--- a/projects/ngx-ramblers/src/app/modules/common/login-required/login-required.html
+++ b/projects/ngx-ramblers/src/app/modules/common/login-required/login-required.html
@@ -1,16 +1,11 @@
-@if (!loggedIn) {
-  @if (!loggedIn) {
-    <div class="jumbotron">
-      <div class="container">
-        <div class="lead">
-          <img src="/assets/images/ramblers/icons/ramblers_icon_9_close_x_rgb.png"/>
-          You need to be logged in to view this page. Click the <a class="ramblers-list" href="login">Login</a> link if
-          you have a
-        login for {{group?.shortName}}</div>
+@if (loggedIn) {
+  <ng-content/>
+} @else {
+  <div class="container py-5 rounded-3 login-required">
+    <div class="lead">
+      <img src="/assets/images/ramblers/icons/ramblers_icon_9_close_x_rgb.png"/>
+      You need to be logged in to view this page. Click the <a class="ramblers-list" href="login">Login</a> link if
+      you have a login for {{ group?.shortName }}
       </div>
     </div>
-  }
-}
-@if (loggedIn) {
-  <ng-content></ng-content>
 }
