--- a/projects/ngx-ramblers/src/app/modules/common/navbar-content/navbar-content.sass
+++ b/projects/ngx-ramblers/src/app/modules/common/navbar-content/navbar-content.sass
@@ -37,6 +37,7 @@
     display: flex !important
     justify-content: flex-end !important
     width: 100% !important
+    margin-right: 1rem !important
 
 @media (min-width: 992px)
   .ramblers-list-bg-light ul > app-page-navigator
@@ -54,6 +55,7 @@
     display: flex !important
     justify-content: flex-end !important
     width: 100% !important
+    margin-right: 1rem !important
 
 @media (min-width: 992px)
   .ramblers-list-bg-dark ul > app-page-navigator
