--- a/projects/ngx-ramblers/src/app/pages/walks/walk-export/walk-export.component.sass
+++ b/projects/ngx-ramblers/src/app/pages/walks/walk-export/walk-export.component.sass
@@ -7,7 +7,7 @@
   display: inline-block
   font-size: 16px
 
-.form-inline > *
+.d-flex > *
   margin-right: 20px
   display: inline-flex
   align-items: center
