--- a/projects/ngx-ramblers/src/app/pages/instagram/instagram.component.sass
+++ b/projects/ngx-ramblers/src/app/pages/instagram/instagram.component.sass
@@ -12,3 +12,8 @@
   color: $ramblers-colour-granite
   margin-top: 5px
 
+.card-fixed-height
+  max-height: 650px
+  overflow: hidden
+  padding-bottom: 1rem
+
